--- a/src/components/BlogList/Posts.module.css
+++ b/src/components/BlogList/Posts.module.css
@@ -1,13 +1,47 @@
-.mainlist {
-  list-style: none;
-  text-decoration: none;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+.tableBlog {
+  width: 100%;
+  table-layout: fixed;
+}
+.tbl-header {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.tbl-content {
+  height: 300px;
+  overflow-x: auto;
+  margin-top: 0px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+th {
+  padding: 20px 15px;
+  text-align: left;
+  font-weight: 700;
+  font-size: 16px;
+  color: rgb(14, 10, 10);
+  text-transform: uppercase;
 }
 
-.list {
+td {
+  padding: 13px;
+  text-align: left;
+  vertical-align: middle;
+  font-weight: 300;
+  font-size: 12px;
+  color: #fff;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+td a {
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: 700;
+  color: #201f1f;
+}
+
+button {
+  border: none;
+  background-color: #4b4949;
+  margin: 2px;
   padding: 5px;
-  border: 1px solid black;
-  margin-bottom: 5px;
-  border: 2px solid black;
+  border-radius: 5px;
+  color: #fff;
 }
