--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,12 +1,25 @@
 .list {
-    display: inline;
-    text-decoration: none;
-    list-style-type: none;
+  display: flex;
+  text-decoration: none;
+  list-style-type: none;
+  justify-content: space-around;
+  padding: 20px;
 }
 
 .listStyleItem {
-    display: inline;
-    font-weight: bold;
-    padding: 8px;
-    border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  width: 40px;
+  height: 40px;
+  border: 2px solid black;
+  border-radius: 50%;
+  background-color: rgb(89, 89, 89);
+  cursor: pointer;
+}
+
+.listStyleItem a {
+  text-decoration: none;
+  color: aliceblue;
 }
