--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,9 @@
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: -webkit-linear-gradient(left, #e2f3ec, #6c7474);
+  background: linear-gradient(to right, #919493, #657374);
+  font-family: "Roboto", sans-serif;
 }
 
 code {
